--- a/exploratory.ipynb
+++ b/exploratory.ipynb
@@ -197,7 +197,7 @@
     }
    ],
    "source": [
-    "plt.figure(figsize = (10, 10))\n",
+    "plt.figure(figsize = (10, 5))\n",
     "sns.boxplot(x='dayofweek', y='sales', data=weekday)\n",
     "plt.show()"
    ]
@@ -236,7 +236,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The most extreme outlier is on Friday (2015-10-30). Initial research does not show obvious reason on explaining the sales spike of that day. Keep this as an open question to follow up with clients."
+    "The most extreme outlier is on Friday (2015-10-30). Initial research does not show obvious reason on explaining the sales spike of that day. We will replace this date of sales with the average sales of the date before and after."
    ]
   },
   {
@@ -942,7 +942,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "While there are 24 sub_cat, top 7 drove 90% of the company total revenue. We will make the assumption that any categories below top 8 won't have significant impact to the analysis and will be ignored."
+    "While there are 19 sub_cat, top 7 drove 90% of the company total revenue. We will make the assumption that any categories below top 8 won't have significant impact to the analysis and will be ignored."
    ]
   },
   {
