--- a/stattest.ipynb
+++ b/stattest.ipynb
@@ -722,15 +722,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It dose not appear that the log transformation helped a lot on stablizing the trend. We will keep the training set without tranformation."
+    "It dose not appear that the log transformation helped a lot on stablizing the trend. \n",
+    "\n",
+    "### We will keep the training set without tranformation."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
