--- a/obtain_data.ipynb
+++ b/obtain_data.ipynb
@@ -11,15 +11,15 @@
      "text": [
       "Requirement already satisfied: kaggle in c:\\users\\sit_k\\appdata\\local\\continuum\\anaconda3\\lib\\site-packages (1.5.5)\n",
       "Requirement already satisfied: python-dateutil in c:\\users\\sit_k\\appdata\\local\\continuum\\anaconda3\\lib\\site-packages (from kaggle) (2.8.0)\n",
-      "Requirement already satisfied: tqdm in c:\\users\\sit_k\\appdata\\local\\continuum\\anaconda3\\lib\\site-packages (from kaggle) (4.31.1)\n",
-      "Requirement already satisfied: certifi in c:\\users\\sit_k\\appdata\\local\\continuum\\anaconda3\\lib\\site-packages (from kaggle) (2019.11.28)\n",
+      "Requirement already satisfied: python-slugify in c:\\users\\sit_k\\appdata\\local\\continuum\\anaconda3\\lib\\site-packages (from kaggle) (3.0.3)\n",
       "Requirement already satisfied: urllib3<1.25,>=1.21.1 in c:\\users\\sit_k\\appdata\\local\\continuum\\anaconda3\\lib\\site-packages (from kaggle) (1.24.1)\n",
       "Requirement already satisfied: six>=1.10 in c:\\users\\sit_k\\appdata\\local\\continuum\\anaconda3\\lib\\site-packages (from kaggle) (1.12.0)\n",
       "Requirement already satisfied: requests in c:\\users\\sit_k\\appdata\\local\\continuum\\anaconda3\\lib\\site-packages (from kaggle) (2.21.0)\n",
-      "Requirement already satisfied: python-slugify in c:\\users\\sit_k\\appdata\\local\\continuum\\anaconda3\\lib\\site-packages (from kaggle) (3.0.3)\n",
+      "Requirement already satisfied: certifi in c:\\users\\sit_k\\appdata\\local\\continuum\\anaconda3\\lib\\site-packages (from kaggle) (2019.11.28)\n",
+      "Requirement already satisfied: tqdm in c:\\users\\sit_k\\appdata\\local\\continuum\\anaconda3\\lib\\site-packages (from kaggle) (4.31.1)\n",
+      "Requirement already satisfied: text-unidecode==1.2 in c:\\users\\sit_k\\appdata\\local\\continuum\\anaconda3\\lib\\site-packages (from python-slugify->kaggle) (1.2)\n",
       "Requirement already satisfied: idna<2.9,>=2.5 in c:\\users\\sit_k\\appdata\\local\\continuum\\anaconda3\\lib\\site-packages (from requests->kaggle) (2.8)\n",
-      "Requirement already satisfied: chardet<3.1.0,>=3.0.2 in c:\\users\\sit_k\\appdata\\local\\continuum\\anaconda3\\lib\\site-packages (from requests->kaggle) (3.0.4)\n",
-      "Requirement already satisfied: text-unidecode==1.2 in c:\\users\\sit_k\\appdata\\local\\continuum\\anaconda3\\lib\\site-packages (from python-slugify->kaggle) (1.2)\n"
+      "Requirement already satisfied: chardet<3.1.0,>=3.0.2 in c:\\users\\sit_k\\appdata\\local\\continuum\\anaconda3\\lib\\site-packages (from requests->kaggle) (3.0.4)\n"
      ]
     }
    ],
@@ -47,12 +47,50 @@
      "output_type": "stream",
      "text": [
       "Warning: Looks like you're using an outdated API Version, please consider updating (server 1.5.6 / client 1.5.5)\n",
-      "test.csv.zip: Skipping, found more recently modified local copy (use --force to force download)\n",
-      "shops.csv: Skipping, found more recently modified local copy (use --force to force download)\n",
-      "items.csv.zip: Skipping, found more recently modified local copy (use --force to force download)\n",
-      "sample_submission.csv.zip: Skipping, found more recently modified local copy (use --force to force download)\n",
-      "item_categories.csv: Skipping, found more recently modified local copy (use --force to force download)\n",
-      "sales_train.csv.zip: Skipping, found more recently modified local copy (use --force to force download)\n"
+      "Downloading shops.csv to data\n",
+      "\n",
+      "Downloading item_categories.csv to data\n",
+      "\n",
+      "Downloading test.csv.zip to data\n",
+      "\n",
+      "Downloading sample_submission.csv.zip to data\n",
+      "\n",
+      "Downloading items.csv.zip to data\n",
+      "\n",
+      "Downloading sales_train.csv.zip to data\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "  0%|          | 0.00/2.91k [00:00<?, ?B/s]\n",
+      "100%|##########| 2.91k/2.91k [00:00<00:00, 2.99MB/s]\n",
+      "\n",
+      "  0%|          | 0.00/3.49k [00:00<?, ?B/s]\n",
+      "100%|##########| 3.49k/3.49k [00:00<00:00, 1.83MB/s]\n",
+      "\n",
+      "  0%|          | 0.00/1.02M [00:00<?, ?B/s]\n",
+      " 98%|#########7| 1.00M/1.02M [00:00<00:00, 6.01MB/s]\n",
+      "100%|##########| 1.02M/1.02M [00:00<00:00, 6.05MB/s]\n",
+      "\n",
+      "  0%|          | 0.00/468k [00:00<?, ?B/s]\n",
+      "100%|##########| 468k/468k [00:00<00:00, 10.5MB/s]\n",
+      "\n",
+      "  0%|          | 0.00/368k [00:00<?, ?B/s]\n",
+      "100%|##########| 368k/368k [00:00<00:00, 12.2MB/s]\n",
+      "\n",
+      "  0%|          | 0.00/13.3M [00:00<?, ?B/s]\n",
+      " 15%|#5        | 2.00M/13.3M [00:00<00:01, 11.0MB/s]\n",
+      " 30%|###       | 4.00M/13.3M [00:00<00:00, 10.9MB/s]\n",
+      " 45%|####5     | 6.00M/13.3M [00:00<00:00, 9.75MB/s]\n",
+      " 60%|######    | 8.00M/13.3M [00:00<00:00, 10.2MB/s]\n",
+      " 75%|#######5  | 10.0M/13.3M [00:01<00:00, 10.5MB/s]\n",
+      " 83%|########2 | 11.0M/13.3M [00:01<00:00, 10.4MB/s]\n",
+      " 98%|#########7| 13.0M/13.3M [00:01<00:00, 10.7MB/s]\n",
+      "100%|##########| 13.3M/13.3M [00:01<00:00, 10.4MB/s]\n"
      ]
     }
    ],
@@ -78,17 +116,12 @@
     {
      "data": {
       "text/plain": [
-       "['items.csv',\n",
-       " 'items.csv.zip',\n",
+       "['items.csv.zip',\n",
        " 'item_categories.csv',\n",
-       " 'sales_train.csv',\n",
        " 'sales_train.csv.zip',\n",
-       " 'sample_submission.csv',\n",
        " 'sample_submission.csv.zip',\n",
        " 'shops.csv',\n",
-       " 'test.csv',\n",
-       " 'test.csv.zip',\n",
-       " 'train_df.csv']"
+       " 'test.csv.zip']"
       ]
      },
      "execution_count": 5,
