--- a/model_ts.ipynb
+++ b/model_ts.ipynb
@@ -4,7 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Modeling"
+    "## Time Series Models"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Based on the statistical test execrise, the data meet stationary requirement. We will apply five different time series to identify the best fit models\n",
+    "- ARIMA\n",
+    "- SARIMA\n",
+    "- Prophet\n",
+    "- Exponential Smoothing\n",
+    "- VARMAX"
    ]
   },
   {
