--- a/ts_stattest.ipynb
+++ b/ts_stattest.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Statistical Test\n",
+    "## Statistical Test - Time Series\n",
     "\n",
     "From the exploratory analysis, we identify that sales tend to fluctuate by month and day of week, both of which are time-series components. We will access the time-series nature of the data to ensure it follows certain properties since any time-series predictive models will rely on that."
    ]
@@ -722,9 +722,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It dose not appear that the log transformation helped a lot on stablizing the trend. \n",
-    "\n",
-    "### We will keep the training set without tranformation."
+    "It dose not appear that the log transformation helped a lot on stablizing the trend. We will keep the training set without tranformation."
    ]
   }
  ],
