--- a/data_submit.ipynb
+++ b/data_submit.ipynb
@@ -4,11 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Kaggle Data Submission\n",
-    "\n",
-    "What we found in the \"model\" section is that general time series may not be very accuarte for this project due to lack of historical data and fluctuations that make the data not very stationary. We will still submit data to kaggle to evaluate its accuarcy, and that would serve as baseline accuracy for continous improvments.\n",
-    "\n",
-    "We know that SARIMAX model would be the most accurate among all. The output, however, is total sales. To fit kaggle requirements, we need to break down into item and shop level. This workbook is to accomplish that."
+    "### Kaggle Data Submission"
    ]
   },
   {
