--- a/exploratory.ipynb
+++ b/exploratory.ipynb
@@ -15,7 +15,7 @@
     "* Would sales be influenced by public holidays such as Christmas?\n",
     "* Would there be certain products that dominate sales volumes and hence play a bigger role on sales prediction?\n",
     "* Would there be obvious product life cycle (growth, mature, decline) that would help to determine future sales?\n",
-    "* Would there be shops that a bigger share in total sales? Would there shops that behaves similarly that can be grouped together for analysis?"
+    "* Would there be shops that a bigger share in total sales? Would shops that behaves similarly that can be grouped together for analysis?"
    ]
   },
   {
@@ -33,25 +33,6 @@
    "outputs": [],
    "source": [
     "# !pip install holidays"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Some information in the dataset is in form of foreign language (Russian), we will use translate python package to perform English translation. Uncomment the pip install code below to download package into local computer or run the code within command. Given that there is limit to the number of translations that each IP address can make in a day, we will install two translate package with one as backup.\n",
-    "<br>\n",
-    "**Update**: due to the instability of language translation APIs, all translation lines are commented out to ensure the codes can run repetitively without interruptions."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# !pip install translate\n",
-    "# !pip install googletrans"
    ]
   },
   {
