--- a/model_ts.ipynb
+++ b/model_ts.ipynb
@@ -11,7 +11,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Based on the statistical test execrise, the data meet stationary requirement. We will apply five different time series to identify the best fit models\n",
+    "Based on the statistical test exercise, the data meet stationary requirement. We will apply five different time series to identify the best fit models\n",
+    "- ARMA\n",
     "- ARIMA\n",
     "- SARIMA\n",
     "- Prophet\n",
