added LM naive model

--- a/data_submit.ipynb
+++ b/data_submit.ipynb
@@ -302,7 +302,7 @@
    "source": [
     "### Naive Model\n",
     "\n",
-    "We want to continue to improve on accuracy, but we should set a baseline for naive model in which no algorithm has been run. We will set it as equal to Nov 2014 actuals by product and by shop."
+    "We want to continue to improve on accuracy, but we should set a baseline for naive model in which no algorithm has been run. We will have two naive models: one using Nov 2014 (period 22) and the other using last period (period 33) actuals by product and by shop."
    ]
   },
   {
@@ -334,6 +334,21 @@
     "naive_d.drop(['shop_id', 'item_id'], axis=1, inplace=True)\n",
     "naive_d.rename(columns={'item_cnt_day':'item_cnt_month'}, inplace=True)\n",
     "naive_d.to_csv('data/submission_naive.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "naive_LM = raw_df.query('date_block_num == 33').reset_index()\n",
+    "naive_LM = naive_LM.groupby(['shop_id', 'item_id'])['item_cnt_day'].sum().reset_index()\n",
+    "naive_LM = pd.merge(test, naive_LM, on=['shop_id', 'item_id'], how='left')\n",
+    "naive_LM.fillna(0,inplace=True)\n",
+    "naive_LM.drop(['shop_id', 'item_id'], axis=1, inplace=True)\n",
+    "naive_LM.rename(columns={'item_cnt_day':'item_cnt_month'}, inplace=True)\n",
+    "naive_LM.to_csv('data/submission_naiveLM.csv', index=False)"
    ]
   },
   {
