--- a/model_ts.ipynb
+++ b/model_ts.ipynb
@@ -308,13 +308,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RMSE is 1,216,434\n"
+      "RMSE is 1,216,434\n",
+      "MAPE is 50.06%\n"
      ]
     }
    ],
    "source": [
     "arma_rmse = np.sqrt(mean_squared_error(ts_test, arma))\n",
-    "print('RMSE is {:,.0f}'.format(arma_rmse))"
+    "arma_mape = np.mean(abs((arma-ts_test)/ts_test))\n",
+    "print('RMSE is {:,.0f}'.format(arma_rmse))\n",
+    "print('MAPE is {:.2%}'.format(arma_mape))"
    ]
   },
   {
@@ -354,25 +357,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fit ARIMA: order=(1, 1, 1) seasonal_order=(0, 1, 1, 12); AIC=31134.466, BIC=31158.960, Fit time=0.946 seconds\n",
-      "Fit ARIMA: order=(0, 1, 0) seasonal_order=(0, 1, 0, 12); AIC=31783.507, BIC=31793.305, Fit time=0.053 seconds\n",
-      "Fit ARIMA: order=(1, 1, 0) seasonal_order=(1, 1, 0, 12); AIC=31435.775, BIC=31455.369, Fit time=0.496 seconds\n",
-      "Fit ARIMA: order=(0, 1, 1) seasonal_order=(0, 1, 1, 12); AIC=31163.990, BIC=31183.584, Fit time=0.622 seconds\n",
-      "Fit ARIMA: order=(1, 1, 1) seasonal_order=(1, 1, 1, 12); AIC=31126.890, BIC=31156.282, Fit time=1.089 seconds\n",
-      "Fit ARIMA: order=(1, 1, 1) seasonal_order=(1, 1, 0, 12); AIC=31302.666, BIC=31327.160, Fit time=1.073 seconds\n",
-      "Fit ARIMA: order=(1, 1, 1) seasonal_order=(1, 1, 2, 12); AIC=31126.078, BIC=31160.369, Fit time=3.840 seconds\n",
-      "Fit ARIMA: order=(0, 1, 1) seasonal_order=(1, 1, 2, 12); AIC=31159.809, BIC=31189.201, Fit time=4.937 seconds\n",
-      "Fit ARIMA: order=(2, 1, 1) seasonal_order=(1, 1, 2, 12); AIC=31105.266, BIC=31144.455, Fit time=6.953 seconds\n",
-      "Fit ARIMA: order=(2, 1, 0) seasonal_order=(1, 1, 2, 12); AIC=31137.723, BIC=31172.014, Fit time=9.747 seconds\n",
-      "Fit ARIMA: order=(2, 1, 2) seasonal_order=(1, 1, 2, 12); AIC=31066.726, BIC=31110.815, Fit time=12.367 seconds\n",
-      "Fit ARIMA: order=(3, 1, 3) seasonal_order=(1, 1, 2, 12); AIC=31035.025, BIC=31088.910, Fit time=31.932 seconds\n",
-      "Fit ARIMA: order=(3, 1, 3) seasonal_order=(0, 1, 2, 12); AIC=31037.452, BIC=31086.439, Fit time=26.697 seconds\n",
-      "Fit ARIMA: order=(3, 1, 3) seasonal_order=(2, 1, 2, 12); AIC=31039.471, BIC=31098.255, Fit time=29.759 seconds\n",
-      "Fit ARIMA: order=(3, 1, 3) seasonal_order=(1, 1, 1, 12); AIC=31040.068, BIC=31089.055, Fit time=9.281 seconds\n",
-      "Fit ARIMA: order=(3, 1, 3) seasonal_order=(0, 1, 1, 12); AIC=31039.154, BIC=31083.242, Fit time=10.119 seconds\n",
-      "Fit ARIMA: order=(2, 1, 3) seasonal_order=(1, 1, 2, 12); AIC=31072.766, BIC=31121.753, Fit time=25.461 seconds\n",
-      "Fit ARIMA: order=(3, 1, 2) seasonal_order=(1, 1, 2, 12); AIC=31064.091, BIC=31113.078, Fit time=26.908 seconds\n",
-      "Total fit time: 202.286 seconds\n"
+      "Fit ARIMA: order=(1, 1, 1) seasonal_order=(0, 1, 1, 12); AIC=31134.466, BIC=31158.960, Fit time=0.995 seconds\n",
+      "Fit ARIMA: order=(0, 1, 0) seasonal_order=(0, 1, 0, 12); AIC=31783.507, BIC=31793.305, Fit time=0.046 seconds\n",
+      "Fit ARIMA: order=(1, 1, 0) seasonal_order=(1, 1, 0, 12); AIC=31435.775, BIC=31455.369, Fit time=0.493 seconds\n",
+      "Fit ARIMA: order=(0, 1, 1) seasonal_order=(0, 1, 1, 12); AIC=31163.990, BIC=31183.584, Fit time=0.648 seconds\n",
+      "Fit ARIMA: order=(1, 1, 1) seasonal_order=(1, 1, 1, 12); AIC=31126.890, BIC=31156.282, Fit time=1.154 seconds\n",
+      "Fit ARIMA: order=(1, 1, 1) seasonal_order=(1, 1, 0, 12); AIC=31302.666, BIC=31327.160, Fit time=1.140 seconds\n",
+      "Fit ARIMA: order=(1, 1, 1) seasonal_order=(1, 1, 2, 12); AIC=31126.078, BIC=31160.369, Fit time=3.931 seconds\n",
+      "Fit ARIMA: order=(0, 1, 1) seasonal_order=(1, 1, 2, 12); AIC=31159.809, BIC=31189.201, Fit time=5.277 seconds\n",
+      "Fit ARIMA: order=(2, 1, 1) seasonal_order=(1, 1, 2, 12); AIC=31105.266, BIC=31144.455, Fit time=7.472 seconds\n",
+      "Fit ARIMA: order=(2, 1, 0) seasonal_order=(1, 1, 2, 12); AIC=31137.723, BIC=31172.014, Fit time=10.199 seconds\n",
+      "Fit ARIMA: order=(2, 1, 2) seasonal_order=(1, 1, 2, 12); AIC=31066.726, BIC=31110.815, Fit time=11.340 seconds\n",
+      "Fit ARIMA: order=(3, 1, 3) seasonal_order=(1, 1, 2, 12); AIC=31035.025, BIC=31088.910, Fit time=32.826 seconds\n",
+      "Fit ARIMA: order=(3, 1, 3) seasonal_order=(0, 1, 2, 12); AIC=31037.452, BIC=31086.439, Fit time=27.807 seconds\n",
+      "Fit ARIMA: order=(3, 1, 3) seasonal_order=(2, 1, 2, 12); AIC=31039.471, BIC=31098.255, Fit time=30.308 seconds\n",
+      "Fit ARIMA: order=(3, 1, 3) seasonal_order=(1, 1, 1, 12); AIC=31040.068, BIC=31089.055, Fit time=9.471 seconds\n",
+      "Fit ARIMA: order=(3, 1, 3) seasonal_order=(0, 1, 1, 12); AIC=31039.154, BIC=31083.242, Fit time=9.598 seconds\n",
+      "Fit ARIMA: order=(2, 1, 3) seasonal_order=(1, 1, 2, 12); AIC=31072.766, BIC=31121.753, Fit time=26.615 seconds\n",
+      "Fit ARIMA: order=(3, 1, 2) seasonal_order=(1, 1, 2, 12); AIC=31064.091, BIC=31113.078, Fit time=28.489 seconds\n",
+      "Total fit time: 207.818 seconds\n"
      ]
     }
    ],
@@ -403,10 +406,10 @@
        "  <th>Model:</th>           <td>SARIMAX(3, 1, 3)x(1, 1, 2, 12)</td> <th>  Log Likelihood     </th> <td>-15506.512</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>                   <td>Sun, 23 Feb 2020</td>        <th>  AIC                </th>  <td>31035.025</td>\n",
+       "  <th>Date:</th>                   <td>Sat, 18 Apr 2020</td>        <th>  AIC                </th>  <td>31035.025</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                       <td>21:55:27</td>            <th>  BIC                </th>  <td>31088.910</td>\n",
+       "  <th>Time:</th>                       <td>17:28:37</td>            <th>  BIC                </th>  <td>31088.910</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>Sample:</th>                         <td>0</td>               <th>  HQIC               </th>  <td>31055.514</td>\n",
@@ -478,8 +481,8 @@
        "==========================================================================================\n",
        "Dep. Variable:                                  y   No. Observations:                 1004\n",
        "Model:             SARIMAX(3, 1, 3)x(1, 1, 2, 12)   Log Likelihood              -15506.512\n",
-       "Date:                            Sun, 23 Feb 2020   AIC                          31035.025\n",
-       "Time:                                    21:55:27   BIC                          31088.910\n",
+       "Date:                            Sat, 18 Apr 2020   AIC                          31035.025\n",
+       "Time:                                    17:28:37   BIC                          31088.910\n",
        "Sample:                                         0   HQIC                         31055.514\n",
        "                                           - 1004                                         \n",
        "Covariance Type:                              opg                                         \n",
@@ -550,13 +553,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RMSE is 1,077,106\n"
+      "RMSE is 1,077,106\n",
+      "MAPE is 43.02%\n"
      ]
     }
    ],
    "source": [
     "sarx_rmse = np.sqrt(mean_squared_error(ts_test, sarimax))\n",
-    "print('RMSE is {:,.0f}'.format(sarx_rmse))"
+    "sarx_mape = np.mean(abs((sarimax-ts_test)/ts_test))\n",
+    "print('RMSE is {:,.0f}'.format(sarx_rmse))\n",
+    "print('MAPE is {:.2%}'.format(sarx_mape))"
    ]
   },
   {
@@ -579,20 +585,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RMSE is 1,428,868\n"
+      "RMSE is 1,428,868\n",
+      "MAPE is 68.93%\n"
      ]
     }
    ],
    "source": [
     "holt_w_rmse = np.sqrt(mean_squared_error(ts_test, holt_w))\n",
-    "print('RMSE is {:,.0f}'.format(holt_w_rmse))"
+    "holt_w_mape = np.mean(abs((holt_w-ts_test)/ts_test))\n",
+    "print('RMSE is {:,.0f}'.format(holt_w_rmse))\n",
+    "print('MAPE is {:.2%}'.format(holt_w_mape))"
    ]
   },
   {
@@ -606,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -618,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -627,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -664,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -673,20 +682,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RMSE is 1,136,539\n"
+      "RMSE is 1,136,539\n",
+      "RMSE is 40.78%\n"
      ]
     }
    ],
    "source": [
     "prophet_rmse = np.sqrt(mean_squared_error(ts_test, prophet))\n",
-    "print('RMSE is {:,.0f}'.format(prophet_rmse))"
+    "prophet_mape = np.mean(abs((prophet-ts_test)/ts_test))\n",
+    "print('RMSE is {:,.0f}'.format(prophet_rmse))\n",
+    "print('RMSE is {:.2%}'.format(prophet_mape))"
    ]
   },
   {
@@ -700,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -711,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -720,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -730,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -739,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -749,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -758,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -768,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -891,7 +903,7 @@
        "2013-01-05  235789.25  354180.45   197081.7  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -902,16 +914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from statsmodels.tsa.statespace.varmax import VARMAX"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -920,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -945,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -965,20 +968,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RMSE is 1,148,011\n"
+      "RMSE is 1,148,011\n",
+      "MAPE is 44.97%\n"
      ]
     }
    ],
    "source": [
     "varx_rmse = np.sqrt(mean_squared_error(ts_test, varx))\n",
-    "print('RMSE is {:,.0f}'.format(varx_rmse))"
+    "varx_mape = np.mean(abs((varx-ts_test)/ts_test))\n",
+    "print('RMSE is {:,.0f}'.format(varx_rmse))\n",
+    "print('MAPE is {:.2%}'.format(varx_mape))"
    ]
   },
   {
@@ -990,23 +996,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#daily average sale during the predict period\n",
-    "daily_avg = np.mean(ts_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
     "model = pd.DataFrame({'model': ['ARMA', 'SARIMAX', 'Holt Winter','Prophet', 'VARMAX'], \n",
     "                      'RMSE': [arma_rmse, sarx_rmse, holt_w_rmse, prophet_rmse, varx_rmse],\n",
-    "                      'daily_RMSE%':[arma_rmse/daily_avg, sarx_rmse/daily_avg, holt_w_rmse/daily_avg, prophet_rmse/(daily_avg), varx_rmse/daily_avg]\n",
+    "                      'MAPE':[arma_mape, sarx_mape, holt_w_mape, prophet_mape, varx_mape]\n",
     "                      \n",
     "                     })\n",
     "model.set_index('model', inplace=True)"
@@ -1014,7 +1010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1039,7 +1035,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>RMSE</th>\n",
-       "      <th>daily_RMSE%</th>\n",
+       "      <th>MAPE</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>model</th>\n",
@@ -1051,43 +1047,43 @@
        "    <tr>\n",
        "      <th>ARMA</th>\n",
        "      <td>1.216434e+06</td>\n",
-       "      <td>0.502547</td>\n",
+       "      <td>0.500573</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>SARIMAX</th>\n",
        "      <td>1.077106e+06</td>\n",
-       "      <td>0.444986</td>\n",
+       "      <td>0.430159</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Holt Winter</th>\n",
        "      <td>1.428868e+06</td>\n",
-       "      <td>0.590310</td>\n",
+       "      <td>0.689339</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Prophet</th>\n",
        "      <td>1.136539e+06</td>\n",
-       "      <td>0.469540</td>\n",
+       "      <td>0.407796</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>VARMAX</th>\n",
        "      <td>1.148011e+06</td>\n",
-       "      <td>0.474279</td>\n",
+       "      <td>0.449700</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                     RMSE  daily_RMSE%\n",
-       "model                                 \n",
-       "ARMA         1.216434e+06     0.502547\n",
-       "SARIMAX      1.077106e+06     0.444986\n",
-       "Holt Winter  1.428868e+06     0.590310\n",
-       "Prophet      1.136539e+06     0.469540\n",
-       "VARMAX       1.148011e+06     0.474279"
+       "                     RMSE      MAPE\n",
+       "model                              \n",
+       "ARMA         1.216434e+06  0.500573\n",
+       "SARIMAX      1.077106e+06  0.430159\n",
+       "Holt Winter  1.428868e+06  0.689339\n",
+       "Prophet      1.136539e+06  0.407796\n",
+       "VARMAX       1.148011e+06  0.449700"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1105,7 +1101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1141,7 +1137,7 @@
     "\n",
     "SARIMAX has the smallest RSME. Prophet, given its simplistic development and fast exeuction, rank a strong second.\n",
     "<br>\n",
-    "However, all the time series models did not perform that much better than the base model. From the graphical results, we also see that there are days that the projections were way off (on daily average, RMSE is 40% off). We would make an initial conclusion that time series models are not the best model on predicting sales at the daily level. The errors will likely to get bigger as we try to drill down to store/product level.\n",
+    "However, all the time series models did not perform that much better than the base model. From the graphical results, we also see that there are days that the projections were way off (MAPE could be >40% off). We would make an initial conclusion that time series models are not the best model on predicting sales at the daily level. The errors will likely to get bigger as we try to drill down to store/product level.\n",
     "\n",
     "Possible reasons that time-series models do not work in this case are limited amount of sales data by date. Sales spikes could be highly depending on product/marketing factors that are independent of time. At the daily level, the sales pattern is not very stationary."
    ]
