update per TA feedbacks

--- a/model_ts.ipynb
+++ b/model_ts.ipynb
@@ -1137,7 +1137,7 @@
     "\n",
     "SARIMAX has the smallest RSME. Prophet, given its simplistic development and fast exeuction, rank a strong second.\n",
     "<br>\n",
-    "However, all the time series models did not perform that much better than the base model. From the graphical results, we also see that there are days that the projections were way off (MAPE could be >40% off). We would make an initial conclusion that time series models are not the best model on predicting sales at the daily level. The errors will likely to get bigger as we try to drill down to store/product level.\n",
+    "However, all the time series models did not perform that much better than the base model. From the graphical results, we also see that there are days that the projections were way off (MAPE could be >40% off). We would make an initial conclusion that basic time series models using historical sales only as the inputs are sufficient on predicting sales. The errors will likely to get bigger as we try to drill down to store/product level.\n",
     "\n",
     "Possible reasons that time-series models do not work in this case are limited amount of sales data by date. Sales spikes could be highly depending on product/marketing factors that are independent of time. At the daily level, the sales pattern is not very stationary."
    ]
@@ -1148,7 +1148,7 @@
    "source": [
     "### Next Steps\n",
     "\n",
-    "We will explore classifications and ensemble models to identify improvements to prediction."
+    "While the basic time-series models did not perform well, exploratory analysis showed that month, products, and shop information had played a role on explaining sales fluctuation. To tap into the predictive benefits of those, we explore building time-series model using classifications and ensemble models."
    ]
   }
  ],
